@@ -686,6 +686,7 @@ Armin Rigo
 Nicholas Riley
 Jean-Claude Rimbault
 Juan M. Bello Rivas
+Davide Rizzo
 Anthony Roach
 Mark Roberts
 Jim Robinson
